dropdown overflow fix

--- a/src/app/core/components/layout/dropdown/dropdown.component.scss
+++ b/src/app/core/components/layout/dropdown/dropdown.component.scss
@@ -8,6 +8,7 @@
     right: 13px;
     width: 300px;
     border-radius: variables.$border-radius;
+    overflow: hidden;
 }
 
 .header{
@@ -27,6 +28,7 @@ ol {
         justify-content: space-between;
         align-items: center;
         padding: 15px 20px;
+        user-select: none;
 
 
         i {
